<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:title="@string/wsrv_quality_settings">

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="wsrv_lossless"
		android:title="@string/wsrv_lossless" />

	<SeekBarPreference
		android:defaultValue="0"
		android:key="wsrv_quality"
		android:max="100"
		android:min="1"
		android:title="@string/wsrv_quality"
		app:showSeekBarValue="true" />

	<ListPreference
		android:defaultValue="original"
		android:entries="@array/wsrv_formats"
		android:entryValues="@array/values_wsrv_formats"
		android:key="wsrv_format"
		android:title="@string/wsrv_format"
		app:useSimpleSummaryProvider="true" />

	<EditTextPreference
		android:defaultValue=""
		android:key="wsrv_max_width"
		android:title="@string/wsrv_max_width"
		android:inputType="number"
		app:useSimpleSummaryProvider="true" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="wsrv_never_upscale"
		android:title="@string/wsrv_never_upscale" />

	<SeekBarPreference
		android:defaultValue="0"
		android:key="wsrv_sharpen"
		android:max="10"
		android:min="0"
		android:title="@string/wsrv_sharpen"
		app:showSeekBarValue="true" />

</PreferenceScreen>
